--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand" href="#"><img class="img-responsive" src="images/logo2.png" alt="" width=100 /></a>
+                      <a class="navbar-brand" href="#"><img class="img-responsive logo" src="images/logo2.png" alt="" width=100 /></a>
                   </div>
                   <div>
                       <div class="collapse navbar-collapse" id="myNavbar">
@@ -73,7 +73,7 @@
               </p>
               <br>
               <p>
-                Our digital approach and complete e-solution not only help us keep track of our customers' unique requirements and preferences, but also facilitate procedural improvements and service efficiency. The improved efficiency leads to a reduction in costs, which we pass on to our customers in the form of highly competitive and pocket-friendly prices.
+                Our digital approach and complete e-solution not only help us keep track of our customers' unique requirements and preferences, but also facilitate procedural improvements and service efficiency. The improved efficiency leads to a reduction in costs, which we pass on to our customers in the form of highly competitive and pocket-friendly <a href="#pricelist">prices</a>.
               </p>
           </div>
       </div>
@@ -84,7 +84,7 @@
               <h1 class="header">PLAN A PICK-UP</h1><br>
           </div>
           <div class="row">
-              <div class="col-xs-12">
+              <div class="col-xs-6">
                 <div class="form-group has-feedback">
                     <label class="control-label">Name: </label>
                     <input type="text" class="form-control"/>
@@ -114,6 +114,9 @@
                       <button type="button" class="btn btn-primary">Submit</button>
                   </div>
               </div>
+              <div class="col-xs-6">
+                  <img class="img-responsive" src="images/pickup.png" alt="" />
+              </div>
           </div>
       </div>
       <br><br>
@@ -126,10 +129,10 @@
             <div class="table-responsive table-bordered">
                 <table class="table">
                     <thead>
-                        <tr>
-                            <th>Items</th>
-                            <th>Cleaning & Pressing</th>
-                            <th>Pressing Only</th>
+                        <tr class="blue">
+                            <th class="navcon">Items</th>
+                            <th class="navcon">Cleaning & Pressing</th>
+                            <th class="navcon">Pressing Only</th>
                         </tr>
                     </thead>
                     <tbody>
