--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   </div>
               </div>
               <div class="col-xs-6">
-                  <img class="img-responsive" src="images/pickup.png" alt="" />
+                  <img class="img-responsive truck" src="images/pickup.png" alt="" />
               </div>
           </div>
       </div>
