--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <br><br>
       <div class="container-fluid">
           <div class="row" id="home">
-              <img class="img-responsive" src="images/pic11.jpg" alt="" height="700" />
+              <img class="img-responsive" src="images/banner1.jpg" alt="" height="700" />
           </div>
       </div>
       <!--ABOUT US -->
