--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                       <div class="collapse navbar-collapse" id="myNavbar">
                           <ul class="nav navbar-nav navbar-right">
                               <li><a href="#home"><p class="navcon">HOME</p></a></li>
-                              <li><a href="#about_us"><p class="navcon">ABOUT US</p></a></li>
                               <li><a href="#pickup"><p class="navcon">PLAN A PICK-UP</p></a></li>
-                              <li><a href="#pricelist"><p class="navcon">PRICE LIST</p></a></li>
                               <li><a href="#contact"><p class="navcon">CONTACT US</p></a></li>
                           </ul>
                       </div>
@@ -52,12 +50,8 @@
           <div class="row" id="home">
               <img class="img-responsive" src="images/banner2.jpg" alt="" height="700" />
           </div>
-      </div>
-      <!--ABOUT US -->
-      <div class="container" id="about_us">
-          <div class="row">
-              <h1 class="header">ABOUT US</h1><br>
-          </div>
+      </div><br><br>
+      <div class="container">
           <div class="row">
               <div class="col-xs-6">
                   <h1 class="header">Pronto Cleaners: Paper-less, hassle-free, pocket-friendly. Your Personalized Laundndry Solution.</h1>
@@ -78,6 +72,8 @@
           </div>
       </div>
       <br><br>
+      <!--ABOUT US -->
+
       <!--PICK-UP LOCATION -->
       <div class="container" id="pickup">
           <div class="row">
@@ -137,19 +133,14 @@
                     </thead>
                     <tbody>
                       <tr>
-                          <td>Shirts/Blouses</td>
-                          <td>10</td>
+                          <td>Shirts/Tee-Shirts/Blouses</td>
+                          <td>8</td>
                           <td>5</td>
                       </tr>
                       <tr>
                           <td>Trousers/Skirts</td>
                           <td>10</td>
                           <td>5</td>
-                      </tr>
-                      <tr>
-                          <td>Tee-Shirts</td>
-                          <td>5</td>
-                          <td>3</td>
                       </tr>
                       <tr>
                           <td>Shawls/Wraps</td>
@@ -182,26 +173,44 @@
                           <td>10</td>
                       </tr>
                       <tr>
-                          <td>Body-Length Outfitst:<br>
-                          Kandurah/Abaya<br>
-                          Long Coats<br>
-                          Saree/Sherwani<br>
-                          Bathrobe<br>
-                          coveralls<br>
-                          </td>
+                          <td>Body-Length Outfitst:</td>
                           <td>20</td>
                           <td>10</td>
                       </tr>
                       <tr>
-                          <td>Accessories:<br>
-                          Towel<br>
-                          Handkerchief<br>
-                          Muffler/Scarf<br>
-                          Hat/Gloves<br>
-                          Tie/Bow Ties<br>
-                          </td>
+                          <td>Kandurah/Abaya</td>
+                      </tr>
+                      <tr>
+                          <td>Long Coats</td>
+                      </tr>
+                      <tr>
+                          <td>Saree/Sherwani</td>
+                      </tr>
+                      <tr>
+                          <td>Bathrobe</td>
+                      </tr>
+                      <tr>
+                          <td>Coveralls</td>
+                      </tr>
+                      <tr>
+                          <td>Accessories:</td>
                           <td>5</td>
                           <td>3</td>
+                      </tr>
+                      <tr>
+                          <td>Towel</td>
+                      </tr>
+                      <tr>
+                          <td>Handkerchief</td>
+                      </tr>
+                      <tr>
+                          <td>Muffler/Scarf</td>
+                      </tr>
+                      <tr>
+                          <td>Hat/Cloves</td>
+                      </tr>
+                      <tr>
+                          <td>Tie/Bow Ties</td>
                       </tr>
 
                     </tbody>
