--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                           <ul class="nav navbar-nav navbar-right">
                               <li><a href="#home"><p class="navcon">HOME</p></a></li>
                               <li><a href="#pickup"><p class="navcon">PLAN A PICK-UP</p></a></li>
+                              <li><a href="#pricelist"><p class="navcon">PRICE LIST</p></a></li>
                               <li><a href="#contact"><p class="navcon">CONTACT US</p></a></li>
                           </ul>
                       </div>
