--- a/index.html
+++ b/index.html
@@ -55,21 +55,37 @@
       <div class="container">
           <div class="row">
               <div class="col-xs-6">
-                  <h1 class="header">Pronto Cleaners: Paper-less, hassle-free, pocket-friendly. Your Personalized Laundndry Solution.</h1>
+                  <h1 class="header" id="moto">Pronto Cleaners: Paper-less, hassle-free, pocket-friendly. Your Personalized Laundndry Solution.</h1>
               </div>
               <div class="col-xs-6">
                   <img class="img-responsive" src="images/LaundryApp1.jpg" alt="Laundry App" />
               </div>
           </div>
           <div class="row">
-              <p>
-                Pronto Cleaners believe that essential, everyday services should be provided in a fully personalized, painless way, to ensure that the customers have the time and peace of mind to focus on their primary life objectives and the pursuit of happiness.
-                As the most innovative dry cleaners in Dubai, Pronto Cleaners offers a paper-less laundry solution. Our sales staff use handheld tablets to take your orders, and our invoices are texted and/or e-mailed to you.
-              </p>
-              <br>
-              <p>
-                Our digital approach and complete e-solution not only help us keep track of our customers' unique requirements and preferences, but also facilitate procedural improvements and service efficiency. The improved efficiency leads to a reduction in costs, which we pass on to our customers in the form of highly competitive and pocket-friendly <a href="#pricelist">prices</a>.
-              </p>
+              <div class="col-sm-12">
+                <p>
+                  Pronto Cleaners believe that essential, everyday services should be provided in a fully personalized, painless way, to ensure that the customers have the time and peace of mind to focus on their primary life objectives and the pursuit of happiness.
+                  As the most innovative dry cleaners in Dubai, Pronto Cleaners offers a paper-less laundry solution. Our sales staff use handheld tablets to take your orders, and our invoices are texted and/or e-mailed to you.
+                </p>
+                <br>
+                <p>
+                  Our digital approach and complete e-solution not only help us keep track of our customers' unique requirements and preferences, but also facilitate procedural improvements and service efficiency. The improved efficiency leads to a reduction in costs, which we pass on to our customers in the form of highly competitive and pocket-friendly <a href="#pricelist">prices</a>.
+                </p>
+              </div>
+          </div>
+      </div><br>
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-8">
+                  <h3 id="emirates">
+                    We are partners with Linencraft - a division of Emirates Flight Catering Co. LLC. Linencraft is an ultra-modern, state-of-the-art
+                    industrial laundry facility. The meticulous attention to detail combined with a professionally-trained team ensure that service and quality
+                    standards are of exceptional and unrivaled excellence.
+                  </h3>
+              </div>
+              <div class="col-sm-4">
+                  <img class="img-responsive" src="images/emirates.png" alt="Emirates" />
+              </div>
           </div>
       </div>
       <br><br>
@@ -122,16 +138,16 @@
           <div class="row">
               <h1 class="header">PRICE LIST</h1><br>
           </div>
-          <div class="row">
-            <div class="table-responsive table-bordered">
-                <table class="table">
-                    <thead>
-                        <tr class="blue">
-                            <th class="navcon">Items</th>
-                            <th class="navcon">Cleaning & Pressing</th>
-                            <th class="navcon">Pressing Only</th>
-                        </tr>
-                    </thead>
+          <div class="container">
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered">
+                  <thead>
+                      <tr class="blue">
+                          <th class="navcon col-xs-5">Items</th>
+                          <th class="navcon col-xs-4">Cleaning & Pressing</th>
+                          <th class="navcon col-xs-3">Pressing Only</th>
+                      </tr>
+                  </thead>
                     <tbody>
                       <tr>
                           <td>Shirts/Tee-Shirts/Blouses</td>
@@ -167,58 +183,72 @@
                           <td>Inner-wear/Swimwear</td>
                           <td>5</td>
                           <td>3</td>
-                      </tr>
-                      <tr>
-                          <td>Bedspread/Tablecloth/Curtains</td>
-                          <td>25</td>
-                          <td>10</td>
-                      </tr>
-                      <tr>
-                          <td>Body-Length Outfitst:</td>
-                          <td>20</td>
-                          <td>10</td>
-                      </tr>
-                      <tr>
-                          <td>Kandurah/Abaya</td>
-                      </tr>
-                      <tr>
-                          <td>Long Coats</td>
-                      </tr>
-                      <tr>
-                          <td>Saree/Sherwani</td>
-                      </tr>
-                      <tr>
-                          <td>Bathrobe</td>
-                      </tr>
-                      <tr>
-                          <td>Coveralls</td>
-                      </tr>
-                      <tr>
-                          <td>Accessories:</td>
-                          <td>5</td>
-                          <td>3</td>
-                      </tr>
-                      <tr>
-                          <td>Towel</td>
-                      </tr>
-                      <tr>
-                          <td>Handkerchief</td>
-                      </tr>
-                      <tr>
-                          <td>Muffler/Scarf</td>
-                      </tr>
-                      <tr>
-                          <td>Hat/Cloves</td>
-                      </tr>
-                      <tr>
-                          <td>Tie/Bow Ties</td>
-                      </tr>
-
+                       </tr>
                     </tbody>
                 </table>
             </div>
-          </div>
-      </div>
+          </div><br>
+          <div class="container">
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered">
+                    <tbody>
+                      <tr>
+                          <td class="col-xs-5">Bedspread/Quilts/Tablecloth/Curtains</td>
+                          <td class="col-xs-4">25</td>
+                          <td class="col-xs-3">10</td>
+                      </tr>
+                    </tbody>
+                </table>
+            </div>
+          </div><br>
+          <div class="container">
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered">
+                    <tbody>
+                      <tr>
+                          <td class="col-xs-5">Body-Length Outfits:</td>
+                          <td class="col-xs-4">20</td>
+                          <td class="col-xs-3">10</td>
+                      </tr>
+                      <tr>
+                          <td>
+                            (Long Coats, Kandurah, Abaya, Ladies' dress, Bathrobe, Coveralls, Saree, Sherwani, etc. )
+                          </td>
+                          <td>
+
+                          </td>
+                          <td>
+
+                          </td>
+                      </tr>
+                    </tbody>
+                </table>
+            </div>
+          </div><br>
+          <div class="container">
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered">
+                    <tbody>
+                      <tr>
+                          <td class="col-xs-5">Accessories:</td>
+                          <td class="col-xs-4">5</td>
+                          <td class="col-xs-3">3</td>
+                      </tr>
+                      <tr>
+                          <td>
+                            (Towel, Handkerchief, Muffler, Scarf, Ghutrah, Agal, Tie, Shorts, Socks, Apron, Babywear)
+                          </td>
+                          <td>
+
+                          </td>
+                          <td>
+
+                          </td>
+                      </tr>
+                    </tbody>
+                </table>
+            </div>
+          </div><br>
       <br><br>
       <!--CONTACT US -->
       <div class="container">
