--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
+    <!--CSS Link -->
     <link rel="stylesheet" href="styles.css">
+    <!--Google API Link -->
+    <!--<link href='https://fonts.googleapis.com/css?family=Euphoria+Script' rel='stylesheet' type='text/css'>-->
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,6 +34,7 @@
                           <span class="icon-bar"></span>
                       </button>
                       <a class="navbar-brand" href="#"><img class="img-responsive logo" src="images/logo2.png" alt="" width=100 /></a>
+                      <a class="navbar-brand" href="#"><img class="img-responsive emirates-logo" src="images/emirates1.gif" alt="" width=100 /></a>
                   </div>
                   <div>
                       <div class="collapse navbar-collapse" id="myNavbar">
@@ -63,12 +67,12 @@
           </div>
           <div class="row">
               <div class="col-sm-12">
-                <p>
+                <p id="font">
                   Pronto Cleaners believe that essential, everyday services should be provided in a fully personalized, painless way, to ensure that the customers have the time and peace of mind to focus on their primary life objectives and the pursuit of happiness.
                   As the most innovative dry cleaners in Dubai, Pronto Cleaners offers a paper-less laundry solution. Our sales staff use handheld tablets to take your orders, and our invoices are texted and/or e-mailed to you.
                 </p>
                 <br>
-                <p>
+                <p id="font">
                   Our digital approach and complete e-solution not only help us keep track of our customers' unique requirements and preferences, but also facilitate procedural improvements and service efficiency. The improved efficiency leads to a reduction in costs, which we pass on to our customers in the form of highly competitive and pocket-friendly <a href="#pricelist">prices</a>.
                 </p>
               </div>
@@ -84,7 +88,7 @@
                   </h3>
               </div>
               <div class="col-sm-4">
-                  <img class="img-responsive" src="images/emirates.png" alt="Emirates" />
+                  <img class="img-responsive img-thumbnail" src="images/emirates.png" alt="Emirates" />
               </div>
           </div>
       </div>
