--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
       <!--NAVIGATION BAR -->
-      <div class="container">
+      <div class="container-fluid">
           <nav class="navbar navbar-default navbar-fixed-top blue">
               <div class="container">
                   <div class="navbar-header">
@@ -34,7 +34,7 @@
                           <span class="icon-bar"></span>
                       </button>
                       <a class="navbar-brand" href="#"><img class="img-responsive logo" src="images/logo2.png" alt="" width=100 /></a>
-                      <a class="navbar-brand" href="#"><img class="img-responsive emirates-logo" src="images/emirates1.gif" alt="" width=100 /></a>
+
                   </div>
                   <div>
                       <div class="collapse navbar-collapse" id="myNavbar">
@@ -43,6 +43,7 @@
                               <li><a href="#pickup"><p class="navcon">PLAN A PICK-UP</p></a></li>
                               <li><a href="#pricelist"><p class="navcon">PRICE LIST</p></a></li>
                               <li><a href="#contact"><p class="navcon">CONTACT US</p></a></li>
+                              <li><a class="navbar-brand" href="#"><img class="img-responsive emirates-logo" src="images/emirates1.gif" alt="" width=100 /></a></li>
                           </ul>
                       </div>
                   </div>
@@ -132,7 +133,7 @@
                   </div>
               </div>
               <div class="col-xs-6">
-                  <img class="img-responsive truck" src="images/pickup.png" alt="" />
+                  <img class="img-responsive truck" src="images/pickup.jpg" alt="" />
               </div>
           </div>
       </div>
