--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                               <li><a href="#pickup"><p class="navcon">PLAN A PICK-UP</p></a></li>
                               <li><a href="#pricelist"><p class="navcon">PRICE LIST</p></a></li>
                               <li><a href="#contact"><p class="navcon">CONTACT US</p></a></li>
-                              <li><a class="navbar-brand" href="#"><img class="img-responsive emirates-logo" src="images/emirates1.gif" alt="" width=100 /></a></li>
+                              <li><a class="navbar-brand" href="#"><img class="img-responsive emirates-logo" src="images/new5.gif" alt="" width=120 /></a></li>
                           </ul>
                       </div>
                   </div>
@@ -54,7 +54,7 @@
       <br><br>
       <div class="container-fluid">
           <div class="row" id="home">
-              <img class="img-responsive" src="images/banner2.jpg" alt="" height="700" />
+              <img class="img-responsive" src="images/cover.jpg" alt="" height="700" />
           </div>
       </div><br><br>
       <div class="container">
